--- a/frontend/src/styling/App.css
+++ b/frontend/src/styling/App.css
@@ -79,6 +79,18 @@
   outline: none;
 }
 
+.search_page_input{
+  margin: 1rem 0;
+  height: 44px;
+  border-radius: 24px;
+  border: 1px solid #dfe1e5;
+  width: 60%;
+  padding: 0 16px;
+  margin-right: 20px;
+  margin-top: 30px;
+  outline: none;
+}
+
 .search{
 
   margin: 1rem 0;
@@ -91,6 +103,13 @@
 
 .logo {
   height: 80px;
+}
+
+.search_page_logo {
+  height: 30px;
+  left: 30px;
+  margin-top: 30px;
+  position: absolute;
 }
 
 .cat{
@@ -150,6 +169,10 @@
   height: 100vh;
 }
 
+.searchPage {
+  height: 100vh;
+}
+
 .noPage h1 {
   margin-top: 0;
   padding-top: 200px;
@@ -183,4 +206,21 @@
   background-color: #f1b1e3;
   width: 55px;
   border-radius: 5px;
+}
+
+.search_page_term{
+  color: white;
+  font-size: 24px;
+}
+
+.results {
+  height: 50px;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+  text-align: left;
+  padding-left: 10px;
+  background-color: rgba(255, 8, 0, 0.8);
+  
 }
