--- a/frontend/src/styling/App.css
+++ b/frontend/src/styling/App.css
@@ -215,12 +215,33 @@
 
 .results {
   height: 50px;
-  width: 80%;
+  width: 20%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 50px;
   text-align: left;
   padding-left: 10px;
-  background-color: rgba(255, 8, 0, 0.8);
-  
+  background-color: red;
+}
+
+.nav-item a {
+  /*Other styles*/
+  padding: 12px 16px;
+  display: block;
+  background-color: white;
+
+  width: 50%;
+  margin: auto;
+
+  border: 2px solid black;
+  border-radius: 5px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.nav-item:hover a:hover {
+  background-color: rgb(156, 156, 156);
 }
