--- a/frontend/src/styling/App.css
+++ b/frontend/src/styling/App.css
@@ -251,7 +251,7 @@
   display: inline-grid;
   justify-content: center;
   grid-template-columns: 25% 75%;
-  grid-template-rows: 100%;
+  grid-template-rows: 90%;
   width: 100%;
   height: 100vh;
   padding-left: 50px;
@@ -267,6 +267,7 @@
   background-color:#3c4043;
   color: white;
   border-radius: 25px;
+  overflow: auto;
 }
 
 .content-display {
@@ -291,27 +292,12 @@
   column-gap: 30px;
 }
 
-.nav-item a {
-  /*Other styles*/
-  padding: 12px 16px;
-  display: block;
-  background-color: white;
-  color: black;
-
-  width: 50%;
-  margin: auto;
-
-  border: 2px solid black;
-  border-radius: 5px;
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
+.result-text {
+  font-size: 50px;
 }
 
-.nav-item:hover a:hover {
-  background-color: rgb(156, 156, 156);
+.result-gif {
+  height: 60vh;
 }
 
 .percentToken{
