--- a/frontend/src/styling/App.css
+++ b/frontend/src/styling/App.css
@@ -57,15 +57,36 @@
   flex-grow: 0.3 !important;
 }
 
-.content {
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  max-width: 800px;
-  align-items: center;
+.index-container {
+  display: inline-grid;
+  justify-content: center;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: 50% 50%;
   width: 100%;
+  height: 100vh;
+  padding-bottom: 30px;
+
+}
+.content {
+  grid-column: 2 / 4;
+  grid-row: 1 / 2;
+  align-items: center;
   padding: 2rem;
-  box-sizing: border-box;
+  
+}
+.cat-item {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  align-items: center;
+  padding: 2rem;
+
+}
+
+.noodle-form-item {
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
+  align-items: center;
+  padding: 2rem;
 }
 
 .search_input{
@@ -91,57 +112,68 @@
 }
 
 .logo {
+  margin-top: 20px;
   height: 120px;
 }
 
 .cat{
   max-width: 150px;
-  position: absolute;
-  bottom: 150px;
-  left: 25vw;
+  margin-bottom: 15px;
+  justify-content: center;
 }
 
 
 .noodle_form {
-  position: fixed;
-  
-  background: rgba(114, 102, 99);
+  place-self: center;
+  background: rgba(180, 169, 156);
   /* background: white; */
   padding: 1rem;
   /* margin-top: 18rem; */
   font-family: 'Noto Sans', sans-serif;
-  width: 35vw;
-  bottom: 100px;
+
   right: 355px;
-  border-radius: 24px;
+  border-radius: 10px;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.233);
 }
 
 .cust_grid{
   display: grid;
-  grid-template-columns: 90px 1fr;
-  row-gap: 1rem;
+  /* grid-template-columns: 90px 1fr; */
+  row-gap: 1.5rem;
+  background: rgba(180, 169, 156, 0.8);
+  padding-top: 20px;
+  padding-left: 30px;
+  padding-right: 30px;
 
 }
 
 .noodle_form input, .noodle_form select {
   padding: 6px;
-  outline: none;
+  background: rgba(240, 233, 225, 0.8);
+  border-color: white;
+  border-style:hidden;
+
+  justify-content: center;
+  
 }
 
 .noodle_form label {
+  padding: 6px;
   text-align: left;
+  justify-content: center;
   color: white;
   
 }
 
 .add {
-  margin-top: 0.7rem;
-  background-color: #f1b1e3;
+  margin-top: 1.2rem;
+  background-color: #ddb9d5;
   border-radius: 4px;
   outline: none;
   font-family: 'Noto Sans', sans-serif;
   font-size: larger;
-
+  font-weight: bold;
+  color: white;
   padding: 0.5rem 1rem;
   border: none;
 }
@@ -175,10 +207,8 @@
 
 .progress-scaf{
   background-color: white;
-  position: fixed;
+  margin: auto;
   width: 220px;
-  bottom: 110px;
-  left: 356px;
   color: #f1b1e3;
   border-radius: 5px;
 }
@@ -190,8 +220,9 @@
 
 .percentToken{
   color: white;
-  position: fixed;
-  bottom: 76px;
+
   font-size: 20px;
   left: 450px;
+  font-family: 'Noto Sans', sans-serif;
 }
+
