--- a/frontend/src/styling/App.css
+++ b/frontend/src/styling/App.css
@@ -60,7 +60,7 @@
 .index-container {
   display: inline-grid;
   justify-content: center;
-  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-columns: 20% 30% 30% 20%;
   grid-template-rows: 50% 50%;
   width: 100%;
   height: 100vh;
@@ -119,19 +119,19 @@
 .cat{
   max-width: 150px;
   margin-bottom: 15px;
+  margin-top: 15px;
   justify-content: center;
 }
 
 
 .noodle_form {
-  place-self: center;
+
   background: rgba(180, 169, 156);
   /* background: white; */
   padding: 1rem;
-  /* margin-top: 18rem; */
+  margin-top: 15px;
+  padding-bottom: 15px;
   font-family: 'Noto Sans', sans-serif;
-
-  right: 355px;
   border-radius: 10px;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.233);
 }
@@ -141,9 +141,9 @@
   /* grid-template-columns: 90px 1fr; */
   row-gap: 1.5rem;
   background: rgba(180, 169, 156, 0.8);
-  padding-top: 20px;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
 
 }
 
