--- a/frontend/src/styling/App.css
+++ b/frontend/src/styling/App.css
@@ -124,7 +124,7 @@
 .noodle_form {
   position: fixed;
   
-  background: rgba(114, 102, 99);
+  background: rgba(180, 169, 156);
   /* background: white; */
   padding: 1rem;
   /* margin-top: 18rem; */
@@ -132,13 +132,15 @@
   width: 35vw;
   bottom: 100px;
   right: 355px;
-  border-radius: 24px;
+  border-radius: 10px;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.233);
 }
 
 .cust_grid{
   display: grid;
-  grid-template-columns: 90px 1fr;
-  row-gap: 1rem;
+
+  row-gap: 1.5rem;
+  background: rgba(180, 169, 156, 0.8);
 
 }
 
@@ -155,11 +157,13 @@
 
 .add {
   margin-top: 0.7rem;
-  background-color: #f1b1e3;
+  background-color: #ddb9d5;
   border-radius: 4px;
   outline: none;
   font-family: 'Noto Sans', sans-serif;
   font-size: larger;
+  font-weight: bold;
+  color: white;
 
   padding: 0.5rem 1rem;
   border: none;
